--- a/benzin_font.css
+++ b/benzin_font.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Benzin';
-    src: url('/website/fonts/benzin.ttf') format('truetype');
+    src: url('/benzin.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
