--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+
 @font-face {
     font-family: 'Benzin';
     src: url('/benzin.ttf') format('truetype');
@@ -35,6 +36,7 @@ a {
     list-style: none;
 }
 
+
 .main-buttons {
     margin-top: 50px;
     display: flex;
@@ -43,10 +45,10 @@ a {
     padding-right: 20px;
     flex-wrap: wrap;
     margin-bottom: 50px;
+    gap: 10px;
 }
 
 .main-buttons button {
-    margin-bottom: 30px;
     width: 200px;
     height: 60px;
     font-family: 'Benzin', serif;
@@ -64,6 +66,47 @@ a {
     transform: translateY(-3px);
     box-shadow: 0 0 25px #FF00FF, 0 0 50px #8A2BE2;
 }
+
+@media (max-width: 1024px) {
+    .main-buttons {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center; 
+    }
+
+    .main-buttons button {
+        width: 160px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .main-buttons {
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .main-buttons button {
+        width: 140px;
+        height: 50px; 
+        font-size: 14px; 
+    }
+}
+
+@media (max-width: 480px) {
+    .main-buttons {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-buttons button {
+        width: 100%;
+        height: 45px;
+        font-size: 12px; 
+        margin-bottom: 15px;
+    }
+}
+
 
 .main img {
     display: block;
